Fix my long face issues on mobile screens

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,6 @@
 .about__logo {
-    height: 55%;
+    width: 100%;
+    height: auto;
 }
 
 .page__aside {
